--- a/src/web/styles/Home.module.css
+++ b/src/web/styles/Home.module.css
@@ -1,11 +1,12 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   align-items: center;
   min-height: 100vh;
 }
 
+/* ---Navbar--- */
 .navbarUl {
   list-style-type: none;
   margin: 0;
