--- a/src/web/styles/Home.module.css
+++ b/src/web/styles/Home.module.css
@@ -1,10 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap');
+
 .main {
   display: flex;
   flex-direction: column;
   /* justify-content: space-between; */
   align-items: center;
   min-height: 100vh;
+  font-family: 'Nunito', sans-serif;
 }
+
 
 /* ---Navbar--- */
 .navbarUl {
@@ -35,4 +39,50 @@
 
 .navbarLi:active {
   background-color: #04AA6D;
+}
+
+
+/* ---Form--- */
+.formContainer {
+  border: 4px solid #2c2f33;
+  border-radius: 30px;
+  padding: 30px 150px;
+}
+
+.formField {
+  padding: 6px 14px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 3px solid #ccc;
+  border-radius: 5px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  outline: none;
+  width: 100%;
+}
+
+.formField:focus {
+  border: 3px solid #555;
+}
+
+.buttonRun {
+  background-color: #4CAF50; /* Green */
+  border: 2px solid transparent;
+  border-radius: 6px;
+  color: white;
+  padding: 12px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  margin-left: 86px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+.buttonRun:hover {
+  background-color: white; 
+  color: green; 
+  border: 2px solid #4CAF50;
 }
