--- a/src/web/styles/Home.module.css
+++ b/src/web/styles/Home.module.css
@@ -9,6 +9,12 @@
   font-family: 'Nunito', sans-serif;
 }
 
+.footer {
+  padding: 15px 23px;
+  color: white;
+  text-align: center;
+  background-color: #111;
+}
 
 /* ---Navbar--- */
 .navbarUl {
