--- a/src/web/styles/Form.module.css
+++ b/src/web/styles/Form.module.css
@@ -2,9 +2,9 @@
     border: 4px solid #2c2f33;
     border-radius: 30px;
     padding: 30px 150px;
-  }
+}
   
-  .formField {
+.formField {
     padding: 6px 14px;
     margin: 8px 0;
     box-sizing: border-box;
@@ -14,30 +14,39 @@
     transition: 0.5s;
     outline: none;
     width: 100%;
-  }
+}
   
-  .formField:focus {
+.formField:focus {
     border: 3px solid #555;
-  }
-  
-  .buttonRun {
-    background-color: #4CAF50; /* Green */
-    border: 2px solid transparent;
-    border-radius: 6px;
-    color: white;
-    padding: 12px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    margin-left: 86px;
-    transition-duration: 0.4s;
-    cursor: pointer;
-  }
-  
-  .buttonRun:hover {
-    background-color: white; 
-    color: green; 
-    border: 2px solid #4CAF50;
-  }
+}
+
+.buttonRun {
+  background: linear-gradient(to bottom right, #04AA6D, #74d1af);
+  border: 0;
+  border-radius: 12px;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 2.5;
+  outline: transparent;
+  padding: 3px 55px;
+  text-align: center;
+  text-decoration: none;
+  transition: box-shadow .2s ease-in-out;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  margin-left: 50px;
+}
+
+.buttonRun:not([disabled]):focus {
+  box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5), -.125rem -.125rem 1rem rgba(7, 125, 38, 0.5), .125rem .125rem 1rem rgba(0, 199, 53, 0.5);
+}
+
+.buttonRun:not([disabled]):hover {
+  box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5), -.125rem -.125rem 1rem rgba(7, 125, 38, 0.5), .125rem .125rem 1rem rgba(0, 199, 53, 0.5);
+}
