--- a/src/web/styles/Home.module.css
+++ b/src/web/styles/Home.module.css
@@ -14,3 +14,19 @@
   text-align: center;
   background-color: #111;
 }
+
+.formField {
+  padding: 8px 19px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 3px solid #ccc;
+  border-radius: 5px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  outline: none;
+  width: 100%;
+}
+
+.formField:focus {
+  border: 3px solid #555;
+}
