--- a/src/web/styles/Form.module.css
+++ b/src/web/styles/Form.module.css
@@ -7,13 +7,13 @@
 .formField {
     padding: 8px 19px;
     margin: 8px 0;
-    box-sizing: border-box;
     border: 3px solid #ccc;
-    border-radius: 5px;
+    border-radius: 8px;
     -webkit-transition: 0.5s;
     transition: 0.5s;
     outline: none;
     width: 100%;
+    height: 39px;
 }
   
 .formField:focus {
@@ -24,4 +24,15 @@
     text-align: center;
     font-size: 46px;
     padding: 20px;
+}
+
+.radio {
+    accent-color: #00ff44;
+    margin: 0 8px 0 60px;
+    width: 20px; 
+    height: 20px;
+}
+
+.radioLabel {
+    font-size: 20px;
 }
