--- a/src/web/styles/Welcome.module.css
+++ b/src/web/styles/Welcome.module.css
@@ -98,3 +98,16 @@
     from { transform: rotate(0deg); }
     from { transform: rotate(360deg); }
 }
+
+.underlineWavy {
+    -webkit-text-decoration: underline wavy #22a4be;
+    text-decoration: underline wavy #22a4be;
+    text-decoration-skip-ink: none;
+}
+
+.underlineGradient {
+    background-image: linear-gradient(90deg, #00ff2a, #4d94ff);
+    background-position: bottom;
+    background-size: 100% 20%;
+    background-repeat: no-repeat;
+}
